force-app/main/default/objects/Opp_Naming_Segment__c/Opp_Naming_Segment__c.object-meta.xml
<CustomObject>
    <description>Configuration object defining the segments of the Opportunity auto-generated Name. Each active record represents one segment (e.g. Account Name, Quarter Year, Type, Business Unit, Billing Region). Segments are ordered by Order__c and resolved dynamically by IRM_OppNamingAction at Opportunity creation and when the Name still contains TBD placeholders.</description>
    <label>Opportunity Naming Segment</label>
    <nameField>
        <displayFormat>ONS-{0000}</displayFormat>
        <label>Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Naming Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>