force-app/main/default/objects/Opp_Naming_Segment__c/fields/Fallback_Value__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Value__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <description>Value to use in the Opportunity Name when the configured field is blank. Defaults to TBD. A name containing TBD triggers auto-recalculation on subsequent saves.</description>
    <label>Fallback Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>