force-app/main/default/objects/Opp_Naming_Segment__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the Opportunity field whose value populates this segment (e.g. Type, Business_Unit__c, Sales_Region__c). Use the special tokens __ACCOUNT_NAME__ or __QUARTER_YEAR__ for derived values that are not direct Opportunity fields.</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>