force-app/main/default/objects/Opp_Naming_Segment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this segment is excluded from Opportunity Name generation. Deactivate instead of deleting to preserve audit history.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>