force-app/main/default/objects/Opp_Naming_Segment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Position of this segment in the Opportunity Name (1 = first). Segments are concatenated in ascending Order__c sequence separated by an en dash.</description>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>