force-app/main/default/objects/Opp_Naming_Segment__c/fields/Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Dev_Name__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>DeveloperName of the Opportunity RecordType this segment applies to (e.g. Standard_Opportunity, Framework_Parent_Opportunity). Use All to apply to all auto-named record types.</description>
    <label>Record Type Dev Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>